--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "^2.5.7",
+    "ejs-layouts": "0.0.1",
     "express": "~4.15.5",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
