--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "passport-facebook": "^2.1.1",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
+    "rand-token": "^0.4.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
